website coffe shop

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!--my style-->
     <link rel="stylesheet" href="style.css" />
-    <title>apa aja wes</title>
+    <title>Tugas Website Coffe</title>
   </head>
   <body>
     <!--navbar star-->
@@ -30,6 +30,7 @@
         <a href="#about">About</a>
         <a href="#menu">Menu</a>
         <a href="#contact">Contact</a>
+        <a href="#footer">Footer</a>
       </div>
 
       <div class="navbar-extra">
@@ -58,16 +59,19 @@
       <h2><span>Tentang</span> Kami</h2>
 
       <div class="row">
-         <div class="about-img">
+        <div class="about-img">
           <img src="img/tentangkami.jpg" alt="kopi" />
         </div>
         <div class="content">
           <h3>kenapa memilih kopi kami?</h3>
           <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptate neque sequi ab, accusamus enim?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+            voluptate neque sequi ab, accusamus enim?
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores laudantium quasi provident tenetur nihil ipsa velit iusto, explicabo quidem totam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            laudantium quasi provident tenetur nihil ipsa velit iusto, explicabo
+            quidem totam.
           </p>
         </div>
       </div>
@@ -78,31 +82,31 @@
     <section id="menu" class="menu">
       <h2><span>Menu</span> Kami</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, unde. Architecto, dignissimos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, unde.
+        Architecto, dignissimos!
       </p>
 
       <div class="row">
         <div class="menu-card">
-          <img src="img/1.jpg" alt="espreso" class="menu-card-img">
+          <img src="img/1.jpg" alt="espreso" class="menu-card-img" />
           <h3 class="menu-card-title">-Espreso-</h3>
           <p class="menu-card-price">-IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="img/1.jpg" alt="espreso" class="menu-card-img">
+          <img src="img/1.jpg" alt="espreso" class="menu-card-img" />
           <h3 class="menu-card-title">-Espreso-</h3>
           <p class="menu-card-price">-IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="img/1.jpg" alt="espreso" class="menu-card-img">
+          <img src="img/1.jpg" alt="espreso" class="menu-card-img" />
           <h3 class="menu-card-title">-Espreso-</h3>
           <p class="menu-card-price">-IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="img/1.jpg" alt="espreso" class="menu-card-img">
+          <img src="img/1.jpg" alt="espreso" class="menu-card-img" />
           <h3 class="menu-card-title">-Espreso-</h3>
           <p class="menu-card-price">-IDR 15K</p>
         </div>
-       
       </div>
     </section>
     <!--menu section end-->
@@ -111,54 +115,57 @@
     <section id="contact" class="contact">
       <h2><span>kontak</span> Kami</h2>
       <p>
-       Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ut tempore quos sapiente unde dolorem tenetur nulla culpa velit libero.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ut
+        tempore quos sapiente unde dolorem tenetur nulla culpa velit libero.
       </p>
       <div class="row">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d88275.48838527015!2d113.15164553879961!3d-7.769341607032781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7ad99c0c9e679%3A0x46c5d0faa7c56181!2sProbolinggo%2C%20Kota%20Probolinggo%2C%20Jawa%20Timur!5e0!3m2!1sid!2sid!4v1680357479981!5m2!1sid!2sid"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d88275.48838527015!2d113.15164553879961!3d-7.769341607032781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7ad99c0c9e679%3A0x46c5d0faa7c56181!2sProbolinggo%2C%20Kota%20Probolinggo%2C%20Jawa%20Timur!5e0!3m2!1sid!2sid!4v1680357479981!5m2!1sid!2sid"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          class="map"
+        ></iframe>
 
         <form action="">
           <div class="input-group">
-              <i data-feather="user"></i>
-              <input type="text" placeholder="nama">
+            <i data-feather="user"></i>
+            <input type="text" placeholder="Nama" />
           </div>
           <div class="input-group">
-              <i data-feather="mail"></i>
-              <input type="text" placeholder="email">
+            <i data-feather="mail"></i>
+            <input type="text" placeholder="Email" />
           </div>
           <div class="input-group">
-              <i data-feather="phone"></i>
-              <input type="text" placeholder="no hp">
+            <i data-feather="phone"></i>
+            <input type="text" placeholder="No hp" />
           </div>
           <button type="submit" class="btn">kirim</button>
         </form>
       </div>
     </section>
 
-<!--footer start-->
-<footer>
-  <div class="social">
-    <a href="#"><i data-feather="instagram"></i></a>
-    <a href="#"><i data-feather="twitter"></i></a>
-    <a href="#"><i data-feather="facebook"></i></a>
-  </div>
-  <div class="links">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#menu">Menu</a>
-    <a href="#contact">Contact</a>
-  </div>
+    <!--footer start-->
+    <footer>
+      <div class="social" id="footer">
+        <a href="#"><i data-feather="instagram"></i></a>
+        <a href="#"><i data-feather="twitter"></i></a>
+        <a href="#"><i data-feather="facebook"></i></a>
+      </div>
+      <div class="links">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Contact</a>
+        <a href="#footer">Footer</a>
+      </div>
 
-<div class="credit">
-  <p>Created by <a href="">Zevanni</a>. | &copy; 2023. </p>
-</div>
+      <div class="credit">
+        <p>Created by <a href="">Zevanni</a>. | &copy; 2023.</p>
+      </div>
+    </footer>
 
-</footer>
-
-
-
-<!--footer end-->
-
-
+    <!--footer end-->
 
     <!--contact section end-->
 
